--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "vscode-test": "^1.4.0"
   },
   "dependencies": {
-    "copy-paste": "^1.3.0",
-    "jsx-parser": "^1.0.8"
-  }
+    "copy-paste": "^1.3.0"
+  },
+  "publisher": "joey"
 }
