--- a/package.json
+++ b/package.json
@@ -50,9 +50,7 @@
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
-    "vscode-test": "^1.4.0"
-  },
-  "dependencies": {
+    "vscode-test": "^1.4.0",
     "copy-paste": "^1.3.0"
   },
   "publisher": "joey"
