--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
     "vscode-test": "^1.4.0",
     "copy-paste": "^1.3.0"
   },
-  "publisher": "joey"
+  "publisher": "joey",
+  "repository": "https://github.com/chengandguo/vscode-plugin-jsx-to-scss.git"
 }
