--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsx-to-scss",
   "displayName": "jsx-to-scss",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.51.0"
   },
@@ -12,7 +12,7 @@
   "activationEvents": [
     "onCommand:jsx-to-scss.extract"
   ],
-  "main": "./extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -37,20 +37,26 @@
     ]
   },
   "scripts": {
+    "build": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "dev": "webpack --mode development --watch",
+    "test-compile": "tsc -p ./",
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.51.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.0",
     "@types/node": "^12.11.7",
+    "@types/vscode": "^1.51.0",
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
     "copy-paste": "^1.3.0"
   },
   "publisher": "joey",
