--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsx-to-scss",
   "displayName": "jsx-to-scss",
   "description": "Help you generate scss/less structure from jsx",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "engines": {
     "vscode": "^1.51.0"
   },
@@ -45,21 +45,23 @@
     "test-compile": "tsc -p ./",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
+    "test": "node ./test/runTest.js",
+    "publish": "npm run build && npx vsce package && npx vsce publish"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.0",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.51.0",
+    "copy-paste": "^1.3.0",
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
+    "vsce": "^2.15.0",
     "vscode-test": "^1.4.0",
     "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
-    "copy-paste": "^1.3.0"
+    "webpack-cli": "^4.2.0"
   },
   "publisher": "joey",
   "repository": "https://github.com/chengandguo/vscode-plugin-jsx-to-scss.git"
